--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,42 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
-    background-color: #d1e7dd; /* Fondo verdoso */
+    width: 100%;
+    background-color: #20d3a4; /* Fondo verdoso */
     margin: 0;
-    color: #000; /* Letras negras */
+    color: #000;
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     background: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    max-width: 500px;
-    width: 100%;
+    max-width: fit-content;
+    width: auto;
+    margin: 0 auto;
 }
 
 h1 {
     margin-bottom: 20px;
-    font-size: 1.5em;
-    color: #000; /* Letras negras */
+    font-size: 2.5em;
+    color: #000;
 }
 
 .countdown {
     font-size: 2em;
-    color: #333;
+    color: #2266E2;
     display: flex;
     justify-content: center;
 }
@@ -46,3 +55,68 @@ h1 {
     font-size: 0.8em;
     color: #666;
 }
+
+.magia{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #6f42c1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    max-width: fit-content;
+    width: auto;
+    margin: auto;
+    margin-top: 50px;
+}
+.magia .btn a{
+    color: #fff;
+    text-decoration: none;
+}
+/* Estilos para el modal */
+.modal {
+    display: none; /* Inicialmente oculto */
+    position: fixed; /* Modal fijo en la pantalla */
+    z-index: 1; /* Posición en la que se mostrará */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Scroll si es necesario */
+    background-color: rgba(0,0,0,0.4); /* Fondo negro con opacidad */
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ancho del modal */
+    max-width: 500px; /* Máximo ancho del modal */
+    text-align: center; /* Centrar contenido */
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Estilos para la imagen dentro del modal */
+  .modal-content img {
+    max-width: 100%; /* Ajusta el tamaño máximo de la imagen */
+    height: auto; /* Altura automática para mantener la proporción */
+    display: block; /* Asegura que la imagen se muestre como bloque */
+    margin: 0 auto; /* Centra la imagen horizontalmente */
+  }
+  
