--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,9 @@ h2{
 .color-aguinaldo{
     color: #9333ea!important;
 }
-
+.span-aguinaldo p {
+    font-size: 2.5rem;
+}
 
 .countdown div span {
     font-size:4em;
