--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,13 @@ h2{
 }
 
 .countdown div span {
-    font-size:4em;
+    font-size:3em;
     display: block;
     font-weight: 600;
 }
 
 .countdown div small {
-    font-size:1em;
+    font-size:0.6em;
     color: #666;
 }
 
@@ -65,6 +65,20 @@ h2{
     flex-direction: column;
     color: #6d28d9;
     font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.firma{
+    display: inline-flex;
+    flex-direction: row;
+    padding: 0!important;
+}
+.text-firma{
+    display: flex;
+    flex-direction: column;
+    color: #6d28d9;
+    font-size: 12px;
     font-weight: bold;
     text-decoration: none;
 }
