Corregimos color de fuetne de los iconos del theme toggle para mostrar acento en activo actualmente

--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,12 @@ h2{
 #row-memes .col-4 {
     margin-bottom: 10px;
 }
+
+.icono-claro {
+    color: white;
+  }
+  
+  .icono-oscuro {
+    color: black;
+  }
+  
